Updated VitePress to v1.6.3 and added 2 plugins

--- a/docs/.vitepress/theme/styles/main.css
+++ b/docs/.vitepress/theme/styles/main.css
@@ -146,3 +146,11 @@
 .dark .VPSidebarItem.has-active:not(.is-active) > .item > .link > .text {
     color: rgba(205, 235, 231, 0.7) !important;
 }
+
+/**
+ * Component: Navbar
+ * -------------------------------------------------------------------------- */
+
+.VPSocialLinks.VPNavBarSocialLinks.social-links {
+    margin-right: 0;
+}
